Fix dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
-html {
+:root {
+  color-scheme: light dark;
   font-family: system-ui;
   background-color: hsl(0, 0%, 95%);
   word-break: break-word;
@@ -25,7 +26,9 @@ main {
   }
 }
 
-main > div { border-radius: inherit; }
+main > div {
+  border-radius: inherit;
+}
 
 section {
   margin: calc(2em + 2ex) calc(-2em - 2ex);
@@ -61,7 +64,9 @@ section:last-child {
   margin-bottom: 0;
 }
 
-.highlight { background-color: hsl(0, 0%, 100%); }
+.highlight {
+  background-color: hsl(0, 0%, 100%);
+}
 
 * {
   line-height: calc(1em + 1ex);
@@ -93,9 +98,13 @@ a:target {
   color: inherit;
 }
 
-code { font-size: 16px; }
+code {
+  font-size: 16px;
+}
 
-template { display: none; }
+template {
+  display: none;
+}
 
 .editor {
   position: relative;
@@ -109,7 +118,7 @@ textarea,
   font-family: monospace;
   font-size: 16px;
   letter-spacing: normal;
-  line-height: 1.5;
+  line-height: calc(1em + 1ex);
   white-space: pre-wrap;
   word-wrap: break-word;
   background: transparent;
@@ -135,10 +144,12 @@ textarea {
   color: inherit;
 }
 
-.credits { text-align: center; }
+.credits {
+  text-align: center;
+}
 
 @media (prefers-color-scheme: dark) {
-  html {
+  :root {
     background-color: hsl(214, 13%, 7.5%);
     color: hsl(214, 13%, 95%);
   }
